--- a/README.me
+++ b/README.me
@@ -1,5 +1,22 @@
 # Password Brute Force and Common Guessing Tool
+Disclaimer
+This tool is intended for educational purposes only.
 
+The purpose of this project is to demonstrate the concepts of password security, brute-forcing techniques, and the importance of using strong, secure passwords. By using this tool, you agree to the following:
+
+Authorized Use Only:
+This tool should only be used on systems, accounts, or passwords that you own or have explicit permission to test. Unauthorized access or attempts to compromise systems or accounts that you do not own is illegal and unethical.
+
+Compliance with Laws:
+Ensure that your use of this tool complies with all applicable laws and regulations in your jurisdiction. Unauthorized password cracking is a violation of privacy and cybersecurity laws.
+
+Responsibility:
+The developer(s) of this tool are not responsible for any misuse, damage, or legal consequences that result from improper use of this tool.
+
+Educational Use Only:
+The tool is designed to help users understand the vulnerabilities of weak passwords and encourage the adoption of stronger security practices. It should not be used for malicious or unauthorized purposes under any circumstances.
+
+By proceeding, you acknowledge that you have read, understood, and agreed to this disclaimer.
 This Python program is designed to test password strength by attempting to brute force a password and check if it matches any commonly used passwords. The tool can be useful for educational purposes, security awareness, or testing the robustness of passwords in a controlled environment.
 
 ## Features
